Bug 499415 - No warning when I enter inconsistent data
Summary: No warning when I enter inconsistent data
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.1.3
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-02 12:54 UTC by antoine
Modified: 2025-02-02 14:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments
demo (558.97 KB, image/gif)
2025-02-02 12:54 UTC, antoine
Details

Note You need to log in before you can comment on or make changes to this bug.
Description antoine 2025-02-02 12:54:30 UTC
Created attachment 177901 [details]
demo

SUMMARY

When I enter inconsistent data in the ledger (reinvest dividend), I have no warning.

STEPS TO REPRODUCE
1. Reinvest 10 shares at 1 euros = 10 euros
2. pay 5 euros for tax
3. and 18 euros of dividend

OBSERVED RESULT
18 != 10+5
Kmymoney automatically changes the dividend value at 15

EXPECTED RESULT
Kmm should give me a warning and should not accept this transaction

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Debian 12
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION

antoine@talos:~$ apt policy kmymoney
kmymoney:
  Installé : 5.1.3-1+b6
  Candidat : 5.1.3-1+b6
 Table de version :
 *** 5.1.3-1+b6 500
        500 http://ftp.fr.debian.org/debian bookworm/main amd64 Packages
        100 /var/lib/dpkg/status
antoine@talos:~$
Comment 1 Thomas Baumgart 2025-02-02 14:38:44 UTC
Git commit d550dfd0a83aee8d19f9a89cf9e16f44f80703fe by Thomas Baumgart.
Committed on 02/02/2025 at 14:35.
Pushed by tbaumgart into branch 'master'.

Make sure a reinvest dividend transaction is balanced

This change makes sure that a reinvestment transaction is balanced when
entered through the invest transaction editor.
FIXED-IN: 5.2

M  +3    -6    kmymoney/views/investactivities.cpp
M  +1    -1    kmymoney/views/investactivities.h
M  +8    -0    kmymoney/views/investtransactioneditor.cpp

https://invent.kde.org/office/kmymoney/-/commit/d550dfd0a83aee8d19f9a89cf9e16f44f80703fe