Make sure a reinvest dividend transaction is balanced

This change makes sure that a reinvestment transaction is balanced when
entered through the invest transaction editor.

BUG: 499415
FIXED-IN: 5.2