kmymoney/views/investactivities.h
@@ -211,7 +211,6 @@ public:
     eMyMoney::Split::InvestmentTransactionType type() const override;
     void showWidgets() const override;
     virtual void adjustStockSplit(MyMoneySplit&) override;
-    MyMoneyMoney totalAmount(const MyMoneySplit& stockSplit, const SplitModel* feesModel, const SplitModel* interestModel) const override;
 
     fieldRequired_t feesRequired() const override {
         return Optional;
@@ -222,6 +221,7 @@ public:
     fieldRequired_t priceRequired() const override {
         return Mandatory;
     }
+    fieldRequired_t assetAccountRequired() const override;
 };
 
 class Add : public Activity
